--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "mlx.h": "c",
-        "raycasting.h": "c"
+        "raycasting.h": "c",
+        "cub3d.h": "c"
     }
 }
